--- a/application/build.gradle
+++ b/application/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    implementation "com.amazonaws:aws-java-sdk-dynamodb:$awsDynamoDBVersion"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
