Revert "Build with AsyncAWSSDK"
This reverts commit 513f0adf06fce610f967b92175bb97760c057c7e.

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -7,11 +7,9 @@ plugins {
 dependencies {
     implementation project(':domain')
 
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-//    implementation "com.amazonaws:aws-java-sdk-dynamodb:$awsDynamoDBVersion"
-    implementation "software.amazon.awssdk:dynamodb:$awsDynamoDBVersion"
-    implementation "software.amazon.awssdk:dynamodb-enhanced:$awsDynamoDBVersion"
+    implementation "com.amazonaws:aws-java-sdk-dynamodb:$awsDynamoDBVersion"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
