--- a/application/build.gradle
+++ b/application/build.gradle
@@ -7,7 +7,25 @@ plugins {
 dependencies {
     implementation project(':domain')
 
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation ('org.springframework.boot:spring-boot-starter-webflux'){
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+
+    implementation "org.apache.commons:commons-lang3:$apacheCommonsLangVersion"
+    implementation "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
+    implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
+    implementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
+    implementation "org.apache.logging.log4j:log4j-jul:$log4jVersion"
+    implementation "org.apache.logging.log4j:log4j-layout-template-json:$log4jVersion"
+
+
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
+    implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonDatabindVersion"
 
 //    implementation "com.amazonaws:aws-java-sdk-dynamodb:$awsDynamoDBVersion"
     implementation "software.amazon.awssdk:dynamodb:$awsDynamoDBVersion"
