--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ subprojects {
         jupiterVersion = '5.8.2'
         mockitoJunitJupiter = '4.4.0'
         awsDynamoDBVersion = '2.17.159'
+
+        apacheCommonsLangVersion = "3.12.0"
+        log4jVersion = "2.17.2"
+        jacksonVersion = '2.13.2'
+        jacksonDatabindVersion = '2.13.2.2'
     }
 
     compileJava {
