--- a/application/build.gradle
+++ b/application/build.gradle
@@ -10,10 +10,14 @@ dependencies {
     implementation ('org.springframework.boot:spring-boot-starter-webflux'){
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
     }
+    implementation ('org.springframework.boot:spring-boot-starter-actuator'){
+        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    }
+
+    implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
 
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
-//    implementation "com.amazonaws:aws-java-sdk-dynamodb:$awsDynamoDBVersion"
     implementation "software.amazon.awssdk:dynamodb:$awsDynamoDBVersion"
     implementation "software.amazon.awssdk:dynamodb-enhanced:$awsDynamoDBVersion"
 
