--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ ext {
     jupiterVersion = '5.8.2'
     mockitoJunitJupiter = '4.4.0'
     awsDynamoDBVersion = '2.17.159'
+    micrometerVersion = '1.8.4'
 
     apacheCommonsLangVersion = "3.12.0"
     log4jVersion = "2.17.2"
