--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
 
   localstack:
+    container_name: localstack
     image: localstack/localstack:latest
     environment:
       - AWS_DEFAULT_REGION=us-east-1
@@ -12,3 +13,16 @@ services:
     volumes:
       - "${TEMPDIR:-/tmp/localstack}:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:latest
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    volumes:
+      - ./scripts/metrics/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports: ["9090:9090"]
+
+networks:
+  sandbox:
+    driver: bridge
