--- a/application/build.gradle
+++ b/application/build.gradle
@@ -5,16 +5,20 @@ plugins {
 }
 
 dependencies {
+
     implementation project(':domain')
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion")
 
     implementation ('org.springframework.boot:spring-boot-starter-webflux'){
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
     }
+    implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
     implementation ('org.springframework.boot:spring-boot-starter-actuator'){
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
     }
-
-    implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
+    implementation "org.springframework.cloud:spring-cloud-starter-aws-messaging"
+    implementation "org.springframework.cloud:spring-cloud-aws-messaging"
+    implementation "com.amazonaws:aws-java-sdk-sqs:$awsSqsVersion"
 
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
@@ -24,6 +28,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
+
 
 jar {
     enabled = true
