--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,10 @@ ext {
     reactorVersion = '3.4.16'
     jupiterVersion = '5.8.2'
     mockitoJunitJupiter = '4.4.0'
-    awsDynamoDBVersion = '2.17.159'
+    awsDynamoDBVersion = '2.17.165'
+    awsSqsVersion='1.12.201'
     micrometerVersion = '1.8.4'
+    springCloudVersion = 'Hoxton.SR12'
 
     apacheCommonsLangVersion = "3.12.0"
     log4jVersion = "2.17.2"
