--- a/application/build.gradle
+++ b/application/build.gradle
@@ -4,14 +4,18 @@ plugins {
     id 'java'
 }
 
+configurations {
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
+}
+
 dependencies {
 
     implementation project(':domain')
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion")
 
-    implementation ('org.springframework.boot:spring-boot-starter-webflux'){
-        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
-    }
+    implementation "org.springframework.boot:spring-boot-starter-webflux"
     implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
     implementation ('org.springframework.boot:spring-boot-starter-actuator'){
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
@@ -32,4 +36,19 @@ dependencies {
 
 jar {
     enabled = true
+}
+
+test {
+    filter{
+        useJUnitPlatform()
+        includeTestsMatching("*UnitTest")
+    }
+}
+
+task integrationTest(type: Test) {
+
+     filter{
+         useJUnitPlatform()
+         includeTestsMatching("*IntegrationTest")
+     }
 }
